<resources>
    <string name="app_name">PaceKeeper</string>
    <string name="viewString">Current speed</string>
    <string name="viewString2">km/h</string>
    <string name="reachedSpeed">You\'ve reached the desired speed!</string>
    <string name="tooFast">You\'re going too fast!</string>
    <string name="tooSlow">You\'re going too slow!</string>
    <string name="time">00:00:00</string>
    <string name="pacekeeper">PaceKeeper</string>
    <string name="status">Status:</string>
    <string name="n_a">N/A</string>
    <string name="distance">DISTANCE</string>
    <string name="confirm">Start</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="timeS">TIME</string>
    <string name="distanceS">0.00</string>
    <string name="unit_of_velocity">KM/H</string>
    <string name="speed">SPEED</string>
    <string name="settings_header">Settings</string>
    <string name="feedback_method">Feedback method</string>
    <string name="vibration_settings">Vibration</string>
    <string name="audio_settings">Audio</string>
    <string name="feedback_frequency">Feedback frequency</string>
    <string name="frequency_low">low</string>
    <string name="frequency_medium">medium</string>
    <string name="frequency_high">high</string>
    <string name="save_settings_button">Save settings</string>
    <string name="sessionOverview">30/3 | 18 min | 5.2 km</string>
    <string name="desired_pace_text">DESIRED PACE:&#160;</string>
    <string name="each_km_in_session"><![CDATA[
    km1 | 5:35 \n
    km2 | 6:40 \n
    km3 | 5:45 \n
    ]]>
    </string>
    <string name="route">Route</string>
    <string name="session_comment_title">Session Comment</string>
    <string name="session_comment"></string>
    <string name="display_settings">Display speed in</string>
    <string name="display_speed_preference">Desired pace unit</string>
    <string name="speed_min_km">min/km</string>
    <string name="speed_km_h">km/h</string>
    <string name="autosave_session">Auto-save finished sessions</string>
    <string name="sessions_textView">Session</string>
    <string name="minutes_tag">MINUTES</string>
    <string name="seconds_tag">SECONDS</string>
    <string name="add_session_comment_button">Add session comment</string>
    <string name="edit_comment_text">Add text here.</string>
    <string name="null_speed">- - : - -</string>
    <string name="sound_samples">Sound Samples</string>
    <string name="vibration_samples">Vibration Samples</string>
    <string name="desired_pace_unit_help">The choice made here changes the pace unit shown throughout the application</string>
    <string name="feedback_frequency_help">The feedback frequency setting alters how often you will receive feedback from the application </string>

</resources>