<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:id="@+id/session_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/titleSession"
        android:background="@drawable/border"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/summary_text_view1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sessionOverview"
                android:textSize="30sp"
                android:layout_marginStart="10dp"/>

            <ImageButton
                android:id="@+id/expand_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:adjustViewBounds="false"
                android:backgroundTint="#CCFBFE"
                android:scaleType="centerCrop"
                android:src="@drawable/expandlogopng" />

        </LinearLayout>

        <TextView
            android:id="@+id/detail_text_view_km"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/each_km_in_session"
            android:textSize="20sp"
            android:visibility="gone"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp" />

        <TextView
            android:id="@+id/detail_text_view_route"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/route"
            android:textSize="24sp"
            android:visibility="gone"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            />

        <ImageView
            android:id="@+id/route_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/detail_text_view_route"
            android:visibility="gone"
            android:src="@drawable/cat"
            android:contentDescription="TODO" />


        <TextView
            android:id="@+id/detail_text_view_session_comment_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/session_comment_title"
            android:textSize="24sp"
            android:visibility="gone"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"/>


        <TextView
            android:id="@+id/detail_text_view_session_comment_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/session_comment"
            android:textSize="24sp"
            android:visibility="gone"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            />


            <ImageButton
                android:id="@+id/compress_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:adjustViewBounds="false"
                android:scaleType="centerCrop"
                android:src="@drawable/expandlogopng"
                android:layout_gravity="end"
                android:backgroundTint="#CCFBFE"
                android:visibility="gone"
                android:rotation="180"
                />





    </LinearLayout>

</ScrollView>