<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_blank"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/runnerview"
    android:visibility="visible"
    tools:context=".MainActivity"
    tools:visibility="visible">


    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101">


        <LinearLayout
            android:id="@+id/session_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/summary_text_view1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/sessionOverview"
                    android:textSize="30sp" />


            </LinearLayout>

            <TextView
                android:id="@+id/detail_text_view_km"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:text="@string/each_km_in_session"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/detail_text_view_route"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:text="@string/route"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/route_image"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:contentDescription="TODO"
                android:src="@drawable/examplerouteimage"
                app:layout_constraintEnd_toEndOf="@+id/linearLayout"
                app:layout_constraintStart_toStartOf="@+id/linearLayout"
                app:layout_constraintTop_toBottomOf="@+id/detail_text_view_route" />


            <TextView
                android:id="@+id/detail_text_view_session_comment_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:text="@string/session_comment_title"
                android:textSize="24sp" />


            <ImageButton
                android:id="@+id/edit_comment_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/baseline_edit_note_24" />

            <EditText
                android:id="@+id/edit_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:inputType="text"
                android:text="@string/edit_comment_text" />

            <TextView
                android:id="@+id/detail_text_view_session_comment_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:text="@string/session_comment"
                android:textSize="18sp"

                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <!--Varför är knappen inte i mitteeeeeeeeeeeeen????-->


                <ImageButton
                    android:id="@+id/discardSessionButtonLogo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/round_button"
                    android:scaleType="centerCrop"
                    android:layout_gravity="bottom"
                    android:src="@drawable/deletesessionbutton"
                    />
                <ImageButton
                    android:id="@+id/stopButtonLogo"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@drawable/round_button"
                    android:scaleType="centerCrop"
                    android:src="@drawable/savesessionbutton"
                    />
                <ImageButton
                    android:id="@+id/resumeSessionButtonLogo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/round_button"
                    android:scaleType="centerCrop"
                    android:layout_gravity="bottom"

                    android:src="@drawable/resumesessionfromoverviewbutton"
                    />

            </LinearLayout>



        </LinearLayout>


    </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

