<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:visibility="visible" tools:visibility="visible">

    <Button
            android:id="@+id/confirmButton"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160dp"
            android:layout_marginEnd="160dp"
            android:layout_marginBottom="400dp"
            android:text="@string/confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/speedInput" android:visibility="visible"
            tools:visibility="visible"/>
    <EditText
            android:id="@+id/speedInput"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="98dp"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/confirmButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/paceKeeper" android:visibility="visible"
            tools:visibility="visible"/>
    <TextView
            android:id="@+id/paceKeeper"
            android:text="@string/pacekeeper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="140dp"
            app:layout_constraintTop_toTopOf="parent"  android:layout_marginEnd="140dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="360dp" android:visibility="visible" tools:visibility="visible"
            android:layout_marginBottom="26dp" app:layout_constraintBottom_toTopOf="@+id/speedLabel"/>
    <TextView
            android:id="@+id/speedLabel"
            android:text="@string/speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:visibility="visible" android:visibility="visible"
            android:layout_marginBottom="24dp" app:layout_constraintBottom_toTopOf="@+id/distanceLabel"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="50dp"
            app:layout_constraintHorizontal_bias="0.189"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="48dp"
            app:layout_constraintTop_toBottomOf="@id/paceKeeper"
            app:layout_constraintVertical_bias="0.977" />
    <TextView
            android:id="@+id/speedDisplay"
            android:text="@string/_0_00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/distanceDisplay"
            app:layout_constraintStart_toEndOf="@id/speedLabel"
            android:layout_marginEnd="40dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/paceKeeper" android:layout_marginTop="24dp"
            android:visibility="visible" tools:visibility="visible"/>
    <TextView
            android:id="@+id/distanceLabel"
            android:text="@string/distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="50dp"
            app:layout_constraintEnd_toEndOf="@id/distanceDisplay" android:layout_marginEnd="48dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/statusLabel"
            app:layout_constraintTop_toTopOf="parent" android:visibility="visible" tools:visibility="visible"/>
    <TextView
            android:id="@+id/distanceDisplay"
            android:text="@string/_0_00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="60dp"
            app:layout_constraintStart_toEndOf="@+id/distanceLabel"
            app:layout_constraintBottom_toTopOf="@+id/statusDisplay"
            app:layout_constraintTop_toBottomOf="@id/speedDisplay" android:layout_marginTop="24dp"
            android:visibility="visible" tools:visibility="visible"/>
    <TextView
            android:id="@+id/statusLabel"
            android:text="@string/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="50dp"
            app:layout_constraintBottom_toTopOf="@+id/speedInput"
            app:layout_constraintEnd_toStartOf="@id/statusDisplay" android:layout_marginEnd="48dp"
            app:layout_constraintTop_toBottomOf="@id/distanceLabel"
            android:visibility="visible" tools:visibility="visible"/>
    <TextView
            android:id="@+id/statusDisplay"
            android:text="@string/n_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="20dp"
            app:layout_constraintStart_toEndOf="@id/statusLabel" android:layout_marginStart="-24dp"
            app:layout_constraintBottom_toTopOf="@+id/speedInput"
            app:layout_constraintTop_toBottomOf="@id/distanceDisplay" android:layout_marginTop="24dp"
            android:visibility="visible" tools:visibility="visible"/>

</androidx.constraintlayout.widget.ConstraintLayout>